# CMATRIX

./: README.md
cmatrix/: .gitignore  CMakeLists.txt  LICENSE  Makefile
cmatrix/cmx_apps/gesture_demo/: README.md  cmx_config.hpp  inuput_interface.hpp  main.cpp  output_handler.cpp  output_handler.hpp
cmatrix/cmx_apps/object_detection_demo/: bounding_box_renderer.cpp  bounding_box_renderer.hpp  camera_input.cpp  camera_input.hpp  cmx_config.hpp  main.cpp
cmatrix/cmx_apps/voice_wake_demo/: README.md  cmx_config.hpp  main.cpp  mic_input.cpp  wake_handler.cpp
cmatrix/cmx_core/: cmx_config.cpp  cmx_config.hpp  cmx_debug.cpp  cmx_debug.hpp  cmx_error.cpp  cmx_error.hpp  cmx_profile.cpp  cmx_profile.hpp  cmx_types.cpp  cmx_types.hpp
cmatrix/cmx_core/graph/: cmx_graph.cpp  cmx_graph.hpp  cmx_graph_format.cpp  cmx_graph_format.hpp  cmx_graph_optimizer.cpp  cmx_graph_optimizer.hpp  cmx_graph_serializer.cpp  cmx_graph_serializer.hpp  cmx_layer_registry.cpp  cmx_layer_registry.hpp  cmx_node.cpp  cmx_node.hpp  cmx_shape_inference.cpp  cmx_shape_inference.hpp
cmatrix/cmx_core/include/: cmx_graph.hpp  cmx_kernels.hpp  cmx_ops.hpp  cmx_platform.hpp  cmx_runtime.hpp  cmx_utils.hpp
cmatrix/cmx_core/kernels/: cmx_kernel_interface.cpp  cmx_kernel_interface.hpp  cmx_kernel_registry.cpp  cmx_kernel_registry.hpp
cmatrix/cmx_core/ops/: cmx_graph_executor.cpp  (+13 more)
cmatrix/cmx_include/: cmatrix.hpp  cmx_api.cpp  cmx_api.hpp  cmx_export_api.cpp  cmx_export_api.hpp  cmx_model_loader.cpp  cmx_model_loder.hpp  cmx_runtime_api.cpp  cmx_runtime_api.hpp
cmatrix/cmx_tools/: requirements.txt
(+162 files in other folders)
